<resources>
    <string name="app_name">QuizApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="question_2_10">Question: 2/10</string>
    <string name="_05_00">05:00</string>
    <string name="score_10">Score:00</string>
    <string name="_100_point">100 point</string>
    <string name="language">What/s language do you like?</string>
    <string name="css">Css</string>
    <string name="java">Java</string>
    <string name="python">Python</string>
    <string name="kotlin">Kotlin</string>
    <string name="reset">00:00</string>
    <string name="title">Programming Hero</string>
    <string name="high_score">Highscore</string>
    <string name="score">00 Point</string>
    <string name="start">Start</string>
    <string name="titleBold">Quiz App</string>
    <string name="point">Point</string>
    <string name="go">Go To Home</string>
</resources>