<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue1"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.questions.QuestionsFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        app:layout_constraintTop_toTopOf="parent"
        app:cardMaxElevation="10dp"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/question_number_Tv"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/question_2_10"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/countDownTimeTx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/_05_00"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/score_number_Tv"
                app:layout_constraintStart_toEndOf="@+id/question_number_Tv"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/score_number_Tv"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/score_10"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        android:id="@+id/card"
        app:cardMaxElevation="10dp"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="80dp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/pointTx"
                android:text="Point"
                android:textColor="@color/red"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="20dp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatTextView
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/pointTx"
                android:id="@+id/question_point"
                android:text="@string/_100_point"
                android:textColor="@color/red"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="10dp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>



            <androidx.appcompat.widget.AppCompatTextView
                app:layout_constraintTop_toBottomOf="@+id/question_point"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:id="@+id/questionTx"
                android:text="@string/language"
                android:maxLines="3"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="50dp"/>

            <View
                app:layout_constraintTop_toBottomOf="@+id/questionTx"
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cons"
        app:layout_constraintTop_toBottomOf="@+id/card"
        android:layout_marginEnd="20sp"
        android:layout_marginStart="20sp"
        android:layout_marginTop="80dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_option_one"
            app:layout_constraintTop_toTopOf="parent"
            app:cardMaxElevation="10dp"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/option_one_item"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatTextView
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:id="@+id/option_one"
                    android:text="@string/css"
                    android:layout_marginTop="8dp"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_option_two"
            app:layout_constraintTop_toBottomOf="@+id/card_option_one"
            app:cardMaxElevation="10dp"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/option_two_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:id="@+id/option_two"
                    android:text="@string/java"
                    android:layout_marginTop="8dp"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_option_three"
            app:layout_constraintTop_toBottomOf="@+id/card_option_two"
            app:cardMaxElevation="10dp"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/option_three_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:id="@+id/option_three"
                    android:text="@string/python"
                    android:layout_marginTop="8dp"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_option_four"
            app:layout_constraintTop_toBottomOf="@+id/card_option_three"
            app:cardMaxElevation="10dp"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/option_four_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:id="@+id/option_four"
                    android:text="@string/kotlin"
                    android:layout_marginTop="8dp"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <View
            app:layout_constraintTop_toBottomOf="@+id/card_option_four"
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        app:layout_constraintTop_toBottomOf="@+id/cons"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20sp"
        android:layout_marginTop="30dp"
        android:textAllCaps="false"
        android:id="@+id/backBt"
        android:visibility="gone"
        android:text="@string/go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>