<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.HomeFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/high_scoreTx"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/high_score"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="90dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:text="@string/score"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/high_scoreTx"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_logo"
        app:layout_constraintTop_toBottomOf="@+id/score"
        android:layout_margin="30dp"
        app:cardMaxElevation="10dp"
        app:cardCornerRadius="10dp"
        android:layout_width="match_parent"
        android:layout_height="210dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/logo"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/logo"
                android:layout_marginTop="10dp"
                android:layout_width="200dp"
                android:layout_height="130dp"/>



            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/bold_title"
                app:layout_constraintTop_toBottomOf="@id/logo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/titleBold"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:fontFamily="@font/lira"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        app:layout_constraintTop_toBottomOf="@id/card_logo"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/gk"
        android:layout_margin="30dp"
        app:cardMaxElevation="5dp"
        app:cardCornerRadius="5dp"
        android:layout_width="100dp"
        android:layout_height="60dp">

      <androidx.appcompat.widget.AppCompatTextView
          android:paddingStart="40dp"
          android:paddingEnd="10dp"
          android:paddingTop="20dp"
          android:textSize="20sp"
          android:textStyle="bold"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="GK"/>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/kotlin"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_margin="30dp"
        app:cardCornerRadius="5dp"
        app:cardMaxElevation="5dp"
        app:layout_constraintStart_toStartOf="@+id/gk"
        app:layout_constraintEnd_toEndOf="@+id/Java"
        app:layout_constraintTop_toBottomOf="@id/card_logo">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="30dp"
            android:paddingTop="20dp"
            android:paddingEnd="5dp"
            android:text="Kotlin"
            android:textSize="20sp"
            android:textStyle="bold" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/Java"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_margin="30dp"
        android:layout_marginStart="1dp"
        app:cardCornerRadius="5dp"
        app:cardMaxElevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/kotlin"
        app:layout_constraintTop_toBottomOf="@id/card_logo">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="30dp"
            android:paddingTop="20dp"
            android:paddingEnd="5dp"
            android:text="Java"
            android:textSize="20sp"
            android:textStyle="bold" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        app:layout_constraintTop_toBottomOf="@id/gk"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/oop"
        android:layout_margin="30dp"
        app:cardMaxElevation="5dp"
        app:cardCornerRadius="5dp"
        android:layout_width="100dp"
        android:layout_height="60dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:paddingStart="40dp"
            android:paddingEnd="10dp"
            android:paddingTop="20dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="OOP"/>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/sql"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_margin="30dp"
        app:cardCornerRadius="5dp"
        app:cardMaxElevation="5dp"
        app:layout_constraintStart_toStartOf="@+id/oop"
        app:layout_constraintEnd_toEndOf="@+id/Java"
        app:layout_constraintTop_toBottomOf="@id/gk">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="30dp"
            android:paddingTop="20dp"
            android:paddingEnd="5dp"
            android:text="SQL"
            android:textSize="20sp"
            android:textStyle="bold" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/Data"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_margin="30dp"
        android:layout_marginStart="1dp"
        app:cardCornerRadius="5dp"
        app:cardMaxElevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sql"
        app:layout_constraintTop_toBottomOf="@id/Java">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="5dp"
            android:text="Data Str."
            android:textSize="18sp"
            android:textStyle="bold" />

    </com.google.android.material.card.MaterialCardView>



    <com.google.android.material.card.MaterialCardView
        app:layout_constraintTop_toBottomOf="@id/oop"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/Bangla"
        android:layout_margin="30dp"
        app:cardMaxElevation="5dp"
        app:cardCornerRadius="5dp"
        android:layout_width="100dp"
        android:layout_height="60dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:paddingTop="15dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Bangla"/>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/english"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_margin="30dp"
        app:cardCornerRadius="5dp"
        app:cardMaxElevation="5dp"
        app:layout_constraintStart_toStartOf="@+id/Bangla"
        app:layout_constraintEnd_toEndOf="@+id/Java"
        app:layout_constraintTop_toBottomOf="@id/sql">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingTop="20dp"
            android:paddingEnd="5dp"
            android:text="English"
            android:textSize="20sp"
            android:textStyle="bold" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/math"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_margin="30dp"
        android:layout_marginStart="1dp"
        app:cardCornerRadius="5dp"
        app:cardMaxElevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/english"
        app:layout_constraintTop_toBottomOf="@id/Data">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingTop="20dp"
            android:paddingEnd="5dp"
            android:text="Math"
            android:textSize="18sp"
            android:textStyle="bold" />

    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>